Add UI and listener

--- a/app/src/main/res/layout/activity_load_sheet.xml
+++ b/app/src/main/res/layout/activity_load_sheet.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".LoadSheetActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/sheetListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
